# llm-bandit-auction

./: analyze_results.py  benchmark.py  benchmark_results.csv  benchmark_results_200.csv  benchmark_results_500.csv  benchmark_results_dec9_new_rewards.csv  benchmark_results_dec_5.csv  benchmark_results_groq_models.csv  benchmark_results_test.csv  data_loader.py  deberta_test.py  debug.py  main.py  market_weights.json  market_weights_2.json  market_weights_200.json  market_weights_500.json  market_weights_dec9_new_rewards.json  market_weights_dec_5.json  market_weights_dec_8.json  market_weights_test.json  model_config.py  models.py  new_market.py  print_results.py  prompts.py  pyproject.toml  test.py  utils.py  visualize.py
